--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                                                                             </small>
                                                                         </div>
                                                                         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                                                            <table class="table table-striped">
+                                                                            <table class="table table-striped" style="font-size: 0.75em">
                                                                                 <thead>
                                                                                     <tr>
                                                                                         <th style="text-align: center" colspan="2">10 - 19</th>
